This issue tracker has been migrated to GitHub, and is currently read-only.
For more information, see the GitHub FAQs in the Python's Developer Guide.

classification
Title: Reference leak in enumerate
Type: resource usage Stage: resolved
Components: Interpreter Core Versions: Python 3.7, Python 3.6, Python 2.7
process
Status: closed Resolution: fixed
Dependencies: Superseder:
Assigned To: rhettinger Nosy List: rhettinger, serhiy.storchaka
Priority: normal Keywords: patch

Created on 2017-09-25 21:26 by serhiy.storchaka, last changed 2022-04-11 14:58 by admin. This issue is now closed.

Pull Requests
URL Status Linked Edit
PR 3753 merged serhiy.storchaka, 2017-09-25 21:28
PR 3760 merged serhiy.storchaka, 2017-09-26 05:37
PR 3761 merged serhiy.storchaka, 2017-09-26 05:44
Messages (4)
msg302978 - (view) Author: Serhiy Storchaka (serhiy.storchaka) * (Python committer) Date: 2017-09-25 21:26
There is a possible leak of the value emitted by an underlying iterator in enumerate.__next__.

Proposed PR fixes it.
msg303005 - (view) Author: Serhiy Storchaka (serhiy.storchaka) * (Python committer) Date: 2017-09-26 05:15
New changeset 0e950dd22b075b4809c84afda8aede02b76ac0fa by Serhiy Storchaka in branch 'master':
bpo-31579: Fixed a possible leak in enumerate() with large indices. (#3753)
https://github.com/python/cpython/commit/0e950dd22b075b4809c84afda8aede02b76ac0fa
msg303012 - (view) Author: Serhiy Storchaka (serhiy.storchaka) * (Python committer) Date: 2017-09-26 06:11
New changeset 19eb87d857f6d1bad1a3619d9d7534820f82e5f2 by Serhiy Storchaka in branch '2.7':
[2.7] bpo-31579: Fixed a possible leak in enumerate() with large indices. (GH-3753). (#3761)
https://github.com/python/cpython/commit/19eb87d857f6d1bad1a3619d9d7534820f82e5f2
msg303013 - (view) Author: Serhiy Storchaka (serhiy.storchaka) * (Python committer) Date: 2017-09-26 06:11
New changeset d6a356209abd026b41245ad76ba3a374ab0c60db by Serhiy Storchaka in branch '3.6':
[3.6] bpo-31579: Fixed a possible leak in enumerate() with large indices. (GH-3753). (#3760)
https://github.com/python/cpython/commit/d6a356209abd026b41245ad76ba3a374ab0c60db
History
Date User Action Args
2022-04-11 14:58:52adminsetgithub: 75760
2017-09-26 06:12:27serhiy.storchakasetstatus: open -> closed
stage: patch review -> resolved
resolution: fixed
versions: + Python 2.7
2017-09-26 06:11:36serhiy.storchakasetmessages: + msg303013
2017-09-26 06:11:30serhiy.storchakasetmessages: + msg303012
2017-09-26 05:44:00serhiy.storchakasetpull_requests: + pull_request3747
2017-09-26 05:37:16serhiy.storchakasetpull_requests: + pull_request3746
2017-09-26 05:15:00serhiy.storchakasetmessages: + msg303005
2017-09-25 21:28:46serhiy.storchakasetkeywords: + patch
pull_requests: + pull_request3740
2017-09-25 21:26:00serhiy.storchakacreate