bpo-31579: Fixed a possible leak in enumerate() with large indices. (#3753)